--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "my-portfolio-website",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "serve": "vite preview",
+    "build": "vite build",
+    "dev": "vite"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "@mdi/font": "5.9.55",
+    "roboto-fontface": "*",
+    "vue": "^3.0.4",
+    "vuetify": "^3.3.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/compiler-sfc": "^3.0.4",
+    "vite": "^3.0.8",
+    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vue-cli-plugin-vuetify": "~2.5.8"
   }
 }
